[package]
name = "fm-radio"
version = "0.1.0"
description = "FM Radio App using RTL-SDR"
authors = ["you"]
edition = "2021"

[lib]
name = "fm_radio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process", "sync", "rt"] }
